# understudy

./: .gitignore  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: prefetch.yml
.streamlit/: config.toml
understudy/: main.py  prefetch.py
understudy/api/courses/: lookup.py  section.py
understudy/api/mongo/: client.py
understudy/api/rmp/: course.py  data.py  professor.py  queries.py  rating.py
understudy/static/: styles.css
understudy/static/queries/: count_teachers.gql  get_ratings.gql  get_teachers.gql
