[tool.poetry]
name = "understudy"
version = "0.1.0"
description = "Choose professors, wisely."
authors = ["enwask <enwask@ucf.edu>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.9"
beautifulsoup4 = "^4.12.3"
canvasapi = "^3.0.0"
numpy = "^2.1.2"
pandas = "^2.2.3"
plotly = "^5.24.1"
requests = "^2.32.3"
st-mongo-connection = "^1.0.3"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
